feat: completed all required features

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         
         <nav class="navbar">
-            <a href="featured.html"> Featured</a>
-            <a href="#" class="temp"> All</a>
-            <a href="#"> New Arrivals</a>
+            <a href="featured.html" class="nav-link">Featured</a>
+            <a style="color: #2976b2" href="index.html" class="nav-link">All</a>
+            <a href="#" class="nav-link">New Arrivals</a>
         </nav>
 
         <span>
