--- a/featured.html
+++ b/featured.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div>
-            <h2 class="title">Jexplorer</h2>
+            <a href="index.html" class="title"> Jexplorer </a>
         </div>
 
         <nav class="navbar">
