--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <header class="header">
         <div>
-            <h2 class= "title">  Jexplorer </h2>
+            <!-- <a class= "title" href="index.html">  Jexplorer </a> -->
+            <a href="index.html" class="title"> Jexplorer </a>
         </div>
 
         
@@ -69,6 +70,10 @@
                 </div>
             </div>
             
+            <!-- <div class="sort-section">
+                <p> Sort &DoubleDownArrow;</p>
+            </div> -->
+
             <!-- <placeholder>
             <div class="playlist-tile">
                     <img class= "playlist-img" src="img/debby-hudson-hah1pStI7L0-unsplash.jpg" alt="Playlist #">
